online_judge/usermodule/static/all_submissions/403/error_7.txt
/media/nemish/College/GIT/Online-term-work-submission-and-assessment-labs/online_judge/usermodule/static/all_submissions/403/codefile_7.cpp: In function ‘int main()’:
/media/nemish/College/GIT/Online-term-work-submission-and-assessment-labs/online_judge/usermodule/static/all_submissions/403/codefile_7.cpp:45:31: error: ‘getmidmid’ was not declared in this scope
             long long int y = getmidmid);
                               ^~~~~~~~~
/media/nemish/College/GIT/Online-term-work-submission-and-assessment-labs/online_judge/usermodule/static/all_submissions/403/codefile_7.cpp:45:31: note: suggested alternative: ‘getmid’
             long long int y = getmidmid);
                               ^~~~~~~~~
                               getmid
